# flutter-audio-cutting

./: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  README.md  pubspec.yaml
android/: build.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/nguyenphandu/online/audio_cutter/: MainActivity.java
android/app/src/main/jniLibs/x86_64/: libsimpleso.so.1.0.0
android/app/src/profile/: AndroidManifest.xml
ios/Runner.xcodeproj/: project.pbxproj
lib/: AudioPlayerUi.dart  AudioSegmentManagementUi.dart  MessageBus.dart  MicrecorderUi.dart  Shared.dart  main.dart
lib/interop/: hello.dart  readme.md
lib/interop/helloclang/: CMakeLists.txt  hello.c  hello.csproj  hello.def  hello.h  program.cs  program.php  toolchain-arm.cmake
lib/interop/simpleclang/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  libsimpleso.so.1  simpleso.c  simpleso.def  simpleso.h  simpleso_exe
linux/: CMakeLists.txt
macos/Runner/Configs/: AppInfo.xcconfig
screenshot/: featured.xcf  icon.xcf
windows/runner/: Runner.rc
